--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                             <i class="flaticon-call"></i>
                                         </div>
                                         <div class="top-bar-text">
-                                            <h3>Call Us</h3>
+                                            <h3>ติดต่อเรา</h3>
                                             <p>+012 345 6789</p>
                                         </div>
                                     </div>
