--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     </head>
 
     <body>
-        <div class="wrapper">
+<div class="wrapper">
             <!-- Top Bar Start -->
             <div class="top-bar">
                 <div class="container-fluid">
@@ -36,7 +36,7 @@
                         <div class="col-lg-4 col-md-12">
                             <div class="logo">
                                 <a href="index.html">
-                                    <h1>Builderz</h1>
+                                    <h1>ActiveCon</h1>
                                     <!-- <img src="img/logo.jpg" alt="Logo"> -->
                                 </a>
                             </div>
@@ -61,7 +61,7 @@
                                         </div>
                                         <div class="top-bar-text">
                                             <h3>ติดต่อเรา</h3>
-                                            <p>+012 345 6789</p>
+                                            <p>+6624432256</p>
                                         </div>
                                     </div>
                                 </div>
@@ -71,8 +71,8 @@
                                             <i class="flaticon-send-mail"></i>
                                         </div>
                                         <div class="top-bar-text">
-                                            <h3>Email Us</h3>
-                                            <p>info@example.com</p>
+                                            <h3>อีเมลหาเรา</h3>
+                                            <p>wuttisit.atc@gmail.com</p>
                                         </div>
                                     </div>
                                 </div>
@@ -84,7 +84,7 @@
             <!-- Top Bar End -->
 
             <!-- Nav Bar Start -->
-            <div class="nav-bar">
+             <div class="nav-bar">
                 <div class="container-fluid">
                     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
                         <a href="#" class="navbar-brand">MENU</a>
@@ -94,28 +94,20 @@
 
                         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                             <div class="navbar-nav mr-auto">
-                                <a href="index.html" class="nav-item nav-link active">Home</a>
-                                <a href="about.html" class="nav-item nav-link">About</a>
-                                <a href="service.html" class="nav-item nav-link">Service</a>
-                                <a href="team.html" class="nav-item nav-link">Team</a>
+                                <a href="index.html" class="nav-item nav-link ">หน้าแรก</a>
+                                <a href="about.html" class="nav-item nav-link active">เกี่ยวกับเรา</a>
+                                <a href="service.html" class="nav-item nav-link">บริการของเรา</a>
+                                <a href="team.html" class="nav-item nav-link">ทีมงาน</a>
                                 <a href="portfolio.html" class="nav-item nav-link">Project</a>
-                                <div class="nav-item dropdown">
-                                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
-                                    <div class="dropdown-menu">
-                                        <a href="blog.html" class="dropdown-item">Blog Page</a>
-                                        <a href="single.html" class="dropdown-item">Single Page</a>
-                                    </div>
-                                </div>
-                                <a href="contact.html" class="nav-item nav-link">Contact</a>
-                            </div>
-                            <div class="ml-auto">
-                                <a class="btn" href="#">Get A Quote</a>
+                                <a href="blog.html" class="dnav-item nav-link">หนังสือรับรอง</a>
+                                <a href="contact.html" class="nav-item nav-link">ติดต่อเรา</a>
                             </div>
                         </div>
                     </nav>
                 </div>
             </div>
             <!-- Nav Bar End -->
+            
 
 
             <!-- Carousel Start -->
