--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Builderz - Construction Company Website Template</title>
+        <title>ActiveCon</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Construction Company Website Template" name="keywords">
         <meta content="Construction Company Website Template" name="description">
@@ -87,19 +87,18 @@
              <div class="nav-bar">
                 <div class="container-fluid">
                     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-                        <a href="#" class="navbar-brand">MENU</a>
+                        <a href="#" class="navbar-brand">เมนู</a>
                         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                             <span class="navbar-toggler-icon"></span>
                         </button>
 
                         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                             <div class="navbar-nav mr-auto">
-                                <a href="index.html" class="nav-item nav-link ">หน้าแรก</a>
-                                <a href="about.html" class="nav-item nav-link active">เกี่ยวกับเรา</a>
+                                <a href="index.html" class="nav-item nav-link active">หน้าแรก</a>
+                                <a href="about.html" class="nav-item nav-link ">เกี่ยวกับเรา</a>
                                 <a href="service.html" class="nav-item nav-link">บริการของเรา</a>
-                                <a href="team.html" class="nav-item nav-link">ทีมงาน</a>
+                                <!-- <a href="team.html" class="nav-item nav-link">ทีมงาน</a> -->
                                 <a href="portfolio.html" class="nav-item nav-link">Project</a>
-                                <a href="blog.html" class="dnav-item nav-link">หนังสือรับรอง</a>
                                 <a href="contact.html" class="nav-item nav-link">ติดต่อเรา</a>
                             </div>
                         </div>
