--- a/public/contact.html
+++ b/public/contact.html
@@ -93,13 +93,13 @@
 
                         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                             <div class="navbar-nav mr-auto">
-                                <a href="index.html" class="nav-item nav-link ">หน้าแรก</a>
-                                <a href="about.html" class="nav-item nav-link">เกี่ยวกับเรา</a>
-                                <a href="service.html" class="nav-item nav-link">บริการของเรา</a>
-                                <a href="team.html" class="nav-item nav-link">ทีมงาน</a>
+                                <a href="index.html" class="nav-item nav-link ">Home</a>
+                                <a href="about.html" class="nav-item nav-link">About us</a>
+                                <a href="service.html" class="nav-item nav-link">Services</a>
+                                <!-- <a href="team.html" class="nav-item nav-link"></a> -->
                                 <a href="portfolio.html" class="nav-item nav-link">Project</a>
-                                <a href="blog.html" class="dnav-item nav-link">คำรับรอง</a>
-                                <a href="contact.html" class="nav-item nav-link active">ติดต่อเรา</a>
+                                <!-- <a href="blog.html" class="dnav-item nav-link">คำรับรอง</a> -->
+                                <a href="contact.html" class="nav-item nav-link active">Contact us</a>
                             </div>
                         </div>
                     </nav>
@@ -113,11 +113,11 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
-                            <h2>ติดต่อเรา</h2>
+                            <h2>Contact Us</h2>
                         </div>
                         <div class="col-12">
                             <a href="">Home</a>
-                            <a href="">ติดต่อเรา</a>
+                            <a href="">Contact us</a>
                         </div>
                     </div>
                 </div>
@@ -170,6 +170,10 @@
                                         <input type="email" class="form-control" id="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email" />
                                         <p class="help-block text-danger"></p>
                                     </div>
+                                     <div class="control-group">
+                                        <input type="email" class="form-control" id="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email" />
+                                        <p class="help-block text-danger"></p>
+                                    </div>
                                     <div class="control-group">
                                         <input type="text" class="form-control" id="subject" placeholder="Subject" required="required" data-validation-required-message="Please enter a subject" />
                                         <p class="help-block text-danger"></p>
@@ -200,16 +204,16 @@
                                 <p><i class="fa fa-map-marker-alt"></i>77/15 M.3 Bangkruai-Sainoi Road, Bangsrithong, Bangkruai, Nonthaburi 11130</p>
                                 <p><i class="fa fa-phone-alt"></i>+6624432256</p>
                                 <p><i class="fa fa-envelope"></i>wuttisit.atc@gmail.com</p>
-                                <div class="footer-social">
+                                <!-- <div class="footer-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
                                     <a href=""><i class="fab fa-youtube"></i></a>
                                     <a href=""><i class="fab fa-instagram"></i></a>
                                     <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
-                         <div class="col-md-6 col-lg-3">
+                         <!-- <div class="col-md-6 col-lg-3">
                             <div class="footer-link">
                                 <h2>Services Areas</h2>
                                 <a href="">TURNKEY DESIGN AND BUILD</a>
@@ -227,7 +231,7 @@
                                 <a href="blog.html">Testimonial</a>
                                 <a href="contact.html">Contact Us</a>
                             </div>
-                        </div>
+                        </div> -->
                        
                     </div>
                 </div>
