--- a/public/contact.html
+++ b/public/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>ติดต่อเรา</title>
+        <title>Contact us</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Construction Company Website Template" name="keywords">
         <meta content="Construction Company Website Template" name="description">
@@ -30,17 +30,17 @@
     <body>
         <div class="wrapper">
             <!-- Top Bar Start -->
-            <div class="top-bar">
+           <div class="top-bar">
                 <div class="container-fluid">
                     <div class="row align-items-center">
-                       <div class="col-lg-15 col-md-12">
+                        <div class="col-lg-15 col-md-12">
                             <div class="logo">
-                                 <a href="index.html">
+                                <a href="index.html">
                                     <img src="img/logoENG.png" alt="logo">
                                 </a>
                             </div>
                         </div>
-                        <div class="col-lg-8 col-md-7 d-none d-lg-block">
+                        <!-- <div class="col-lg-8 col-md-7 d-none d-lg-block">
                             <div class="row">
                                 <div class="col-4">
                                     <div class="top-bar-item">
@@ -76,7 +76,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
