--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>โครงการของเรา</title>
+        <title>Our Projects</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Construction Company Website Template" name="keywords">
         <meta content="Construction Company Website Template" name="description">
@@ -33,14 +33,14 @@
             <div class="top-bar">
                 <div class="container-fluid">
                     <div class="row align-items-center">
-                       <div class="col-lg-15 col-md-12">
+                        <div class="col-lg-15 col-md-12">
                             <div class="logo">
-                                 <a href="index.html">
+                                <a href="index.html">
                                     <img src="img/logoENG.png" alt="logo">
                                 </a>
                             </div>
                         </div>
-                        <div class="col-lg-8 col-md-7 d-none d-lg-block">
+                        <!-- <div class="col-lg-8 col-md-7 d-none d-lg-block">
                             <div class="row">
                                 <div class="col-4">
                                     <div class="top-bar-item">
@@ -76,14 +76,14 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
             <!-- Top Bar End -->
 
             <!-- Nav Bar Start -->
-             <div class="nav-bar">
+            <div class="nav-bar">
                 <div class="container-fluid">
                     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
                         <a href="#" class="navbar-brand">MENU</a>
@@ -93,13 +93,13 @@
 
                         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                             <div class="navbar-nav mr-auto">
-                                <a href="index.html" class="nav-item nav-link ">หน้าแรก</a>
-                                <a href="about.html" class="nav-item nav-link">เกี่ยวกับเรา</a>
-                                <a href="service.html" class="nav-item nav-link">บริการของเรา</a>
-                                <a href="team.html" class="nav-item nav-link">ทีมงาน</a>
+                                <a href="index.html" class="nav-item nav-link ">Home</a>
+                                <a href="about.html" class="nav-item nav-link">About us</a>
+                                <a href="service.html" class="nav-item nav-link">Services</a>
+                                <!-- <a href="team.html" class="nav-item nav-link"></a> -->
                                 <a href="portfolio.html" class="nav-item nav-link active">Project</a>
-                                <a href="blog.html" class="dnav-item nav-link">คำรับรอง</a>
-                                <a href="contact.html" class="nav-item nav-link">ติดต่อเรา</a>
+                                <!-- <a href="blog.html" class="dnav-item nav-link">คำรับรอง</a> -->
+                                <a href="contact.html" class="nav-item nav-link">Contact us</a>
                             </div>
                         </div>
                     </nav>
@@ -132,7 +132,7 @@
                         <p>Our Projects</p>
                         <h2>Visit Our Projects</h2>
                     </div>
-                    <div class="row">
+                    <!-- <div class="row">
                         <div class="col-12">
                             <ul id="portfolio-flters">
                                 <li data-filter="*" class="filter-active">All</li>
@@ -141,7 +141,7 @@
                                 <li data-filter=".third">Upcoming</li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="row portfolio-container">
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.1s">
                             <div class="portfolio-warp">
@@ -287,6 +287,167 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
+                            <div class="portfolio-warp">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <div class="portfolio-overlay">
+                                        <p>
+                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="portfolio-text">
+                                    <h3>Project Name</h3>
+                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
+                            <div class="portfolio-warp">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <div class="portfolio-overlay">
+                                        <p>
+                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="portfolio-text">
+                                    <h3>Project Name</h3>
+                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
+                            <div class="portfolio-warp">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <div class="portfolio-overlay">
+                                        <p>
+                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="portfolio-text">
+                                    <h3>Project Name</h3>
+                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
+                            <div class="portfolio-warp">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <div class="portfolio-overlay">
+                                        <p>
+                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="portfolio-text">
+                                    <h3>Project Name</h3>
+                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
+                            <div class="portfolio-warp">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <div class="portfolio-overlay">
+                                        <p>
+                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="portfolio-text">
+                                    <h3>Project Name</h3>
+                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
+                            <div class="portfolio-warp">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <div class="portfolio-overlay">
+                                        <p>
+                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="portfolio-text">
+                                    <h3>Project Name</h3>
+                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
+                            <div class="portfolio-warp">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <div class="portfolio-overlay">
+                                        <p>
+                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="portfolio-text">
+                                    <h3>Project Name</h3>
+                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
+                            <div class="portfolio-warp">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <div class="portfolio-overlay">
+                                        <p>
+                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="portfolio-text">
+                                    <h3>Project Name</h3>
+                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
+                            <div class="portfolio-warp">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <div class="portfolio-overlay">
+                                        <p>
+                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="portfolio-text">
+                                    <h3>Project Name</h3>
+                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
+                            <div class="portfolio-warp">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <div class="portfolio-overlay">
+                                        <p>
+                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="portfolio-text">
+                                    <h3>Project Name</h3>
+                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 
                 </div>
