--- a/public/service.html
+++ b/public/service.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>บริการของเรา</title>
+        <title>Our Service</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Construction Company Website Template" name="keywords">
         <meta content="Construction Company Website Template" name="description">
@@ -30,17 +30,17 @@
     <body>
         <div class="wrapper">
             <!-- Top Bar Start -->
-            <div class="top-bar">
+ <div class="top-bar">
                 <div class="container-fluid">
                     <div class="row align-items-center">
                         <div class="col-lg-15 col-md-12">
                             <div class="logo">
-                                 <a href="index.html">
+                                <a href="index.html">
                                     <img src="img/logoENG.png" alt="logo">
                                 </a>
                             </div>
                         </div>
-                        <div class="col-lg-8 col-md-7 d-none d-lg-block">
+                        <!-- <div class="col-lg-8 col-md-7 d-none d-lg-block">
                             <div class="row">
                                 <div class="col-4">
                                     <div class="top-bar-item">
@@ -76,7 +76,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -93,13 +93,13 @@
 
                         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                             <div class="navbar-nav mr-auto">
-                                <a href="index.html" class="nav-item nav-link ">หน้าแรก</a>
-                                <a href="about.html" class="nav-item nav-link">เกี่ยวกับเรา</a>
-                                <a href="service.html" class="nav-item nav-link active">บริการของเรา</a>
-                                <a href="team.html" class="nav-item nav-link">ทีมงาน</a>
+                                <a href="index.html" class="nav-item nav-link ">Home</a>
+                                <a href="about.html" class="nav-item nav-link">About us</a>
+                                <a href="service.html" class="nav-item nav-link active">Services</a>
+                                <!-- <a href="team.html" class="nav-item nav-link"></a> -->
                                 <a href="portfolio.html" class="nav-item nav-link">Project</a>
-                                <a href="blog.html" class="dnav-item nav-link">หนังสือรับรอง</a>
-                                <a href="contact.html" class="nav-item nav-link ">ติดต่อเรา</a>
+                                <!-- <a href="blog.html" class="dnav-item nav-link">คำรับรอง</a> -->
+                                <a href="contact.html" class="nav-item nav-link">Contact us</a>
                             </div>
                         </div>
                     </nav>
