--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -149,13 +149,15 @@
                                     <img src="img/portfolio-1.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tort
+                                            
+                                            or, auctor id gravi condime, viverra quis sem.
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Project Name</h3>
-                                    <a class="btn" href="img/portfolio-1.jpg" data-lightbox="portfolio">+</a>
+                                    <h3>Mondae Nissin</h3>
+                                    <a class="btn" href="MN01.html" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
                         </div>
@@ -170,8 +172,8 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Project Name</h3>
-                                    <a class="btn" href="img/portfolio-2.jpg" data-lightbox="portfolio">+</a>
+                                    <h3>Orange Line</h3>
+                                    <a class="btn" href="UN01.jpg" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
                         </div>
@@ -186,8 +188,8 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Project Name</h3>
-                                    <a class="btn" href="img/portfolio-3.jpg" data-lightbox="portfolio">+</a>
+                                    <h3>Srinakarivirot Hospital</h3>
+                                    <a class="btn" href="TG01.jpg" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
                         </div>
@@ -202,7 +204,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Project Name</h3>
+                                    <h3>Underground Works, PEA Puket</h3>
                                     <a class="btn" href="img/portfolio-4.jpg" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
@@ -218,7 +220,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Project Name</h3>
+                                    <h3>Protection Wall , TC Phamacheutical</h3>
                                     <a class="btn" href="img/portfolio-5.jpg" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
@@ -234,7 +236,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Project Name</h3>
+                                    <h3>Substation 69 kv Bldg., MWA (Prachachuen)</h3>
                                     <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
@@ -250,7 +252,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Project Name</h3>
+                                    <h3>Substation 69 kv Bldg., MEA (Ladkrabung)</h3>
                                     <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
@@ -266,7 +268,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Project Name</h3>
+                                    <h3>10th Fl. Car Park Bldg., PKS 2 Hospital</h3>
                                     <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
@@ -282,7 +284,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Project Name</h3>
+                                    <h3>The Circle Ratchapruk Renovate Phase 2</h3>
                                     <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
@@ -298,7 +300,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Project Name</h3>
+                                    <h3>The Circle Ratchapruk Renovate Phase 1</h3>
                                     <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
@@ -314,7 +316,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Project Name</h3>
+                                    <h3>SIG Combibloc</h3>
                                     <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
@@ -330,7 +332,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Project Name</h3>
+                                    <h3>Villa Market, The Circle Ratchapruk</h3>
                                     <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
@@ -346,7 +348,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Project Name</h3>
+                                    <h3>Solar Power Plant (Nongkee, Burirum)</h3>
                                     <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
@@ -362,7 +364,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Project Name</h3>
+                                    <h3>Solar Power Plant (Prakonchai, Burirum)</h3>
                                     <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
@@ -378,7 +380,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Project Name</h3>
+                                    <h3>Solar Power Plant (Nakam, Prachinburi)</h3>
                                     <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
@@ -394,7 +396,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Project Name</h3>
+                                    <h3>Solar Power Plant (Bang Pa Hun, Ayutthaya)</h3>
                                     <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
@@ -410,7 +412,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Project Name</h3>
+                                    <h3>Solar Power Plant (Bamnejnarong, Chaiyapum)</h3>
                                     <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
@@ -426,7 +428,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Project Name</h3>
+                                    <h3>Solar Power Plant (Bang Pa-in, Ayutthaya)</h3>
                                     <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
@@ -442,7 +444,24 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Project Name</h3>
+                                    <h3>ESSILOR Canteen Extension</h3>
+                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                </div>
+                            </div>
+                        </div>
+
+                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
+                            <div class="portfolio-warp">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <div class="portfolio-overlay">
+                                        <p>
+                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="portfolio-text">
+                                    <h3>Nissan Car Park</h3>
                                     <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
@@ -456,7 +475,7 @@
 
 
             <!-- Footer Start -->
-            <div class="footer wow fadeIn" data-wow-delay="0.3s">
+                <div class="footer wow fadeIn" data-wow-delay="0.3s">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 col-lg-3">
@@ -465,16 +484,16 @@
                                 <p><i class="fa fa-map-marker-alt"></i>77/15 M.3 Bangkruai-Sainoi Road, Bangsrithong, Bangkruai, Nonthaburi 11130</p>
                                 <p><i class="fa fa-phone-alt"></i>+6624432256</p>
                                 <p><i class="fa fa-envelope"></i>wuttisit.atc@gmail.com</p>
-                                <div class="footer-social">
+                                <!-- <div class="footer-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
                                     <a href=""><i class="fab fa-youtube"></i></a>
                                     <a href=""><i class="fab fa-instagram"></i></a>
                                     <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
-                         <div class="col-md-6 col-lg-3">
+                         <!-- <div class="col-md-6 col-lg-3">
                             <div class="footer-link">
                                 <h2>Services Areas</h2>
                                 <a href="">TURNKEY DESIGN AND BUILD</a>
@@ -492,7 +511,7 @@
                                 <a href="blog.html">Testimonial</a>
                                 <a href="contact.html">Contact Us</a>
                             </div>
-                        </div>
+                        </div> -->
                        
                     </div>
                 </div>
