--- a/public/about.html
+++ b/public/about.html
@@ -291,7 +291,7 @@
 
 
             <!-- Footer Start -->
-              <div class="footer wow fadeIn" data-wow-delay="0.3s">
+                         <div class="footer wow fadeIn" data-wow-delay="0.3s">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 col-lg-3">
@@ -300,16 +300,16 @@
                                 <p><i class="fa fa-map-marker-alt"></i>77/15 M.3 Bangkruai-Sainoi Road, Bangsrithong, Bangkruai, Nonthaburi 11130</p>
                                 <p><i class="fa fa-phone-alt"></i>+6624432256</p>
                                 <p><i class="fa fa-envelope"></i>wuttisit.atc@gmail.com</p>
-                                <div class="footer-social">
+                                <!-- <div class="footer-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
                                     <a href=""><i class="fab fa-youtube"></i></a>
                                     <a href=""><i class="fab fa-instagram"></i></a>
                                     <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
-                         <div class="col-md-6 col-lg-3">
+                         <!-- <div class="col-md-6 col-lg-3">
                             <div class="footer-link">
                                 <h2>Services Areas</h2>
                                 <a href="">TURNKEY DESIGN AND BUILD</a>
@@ -324,10 +324,10 @@
                                 <a href="about.html">About Us</a>
                                 <a href="team.html">Our Team</a>
                                 <a href="portfolio.html">Projects</a>
-                                <a href="blog.html">certificate</a>
+                                <a href="blog.html">Testimonial</a>
                                 <a href="contact.html">Contact Us</a>
                             </div>
-                        </div>
+                        </div> -->
                        
                     </div>
                 </div>
