--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -157,7 +157,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Mondae Nissin</h3>
-                                    <a class="btn" href="single.html" data-lightbox="portfolio">+</a>
+                                    <a href="single.html" class="btn nav-link"  >+</a>
                                 </div>
                             </div>
                         </div>
