--- a/public/single.html
+++ b/public/single.html
@@ -145,7 +145,7 @@
                                     <p>Year &nbsp; &nbsp;		: 2009-2010</p>
                                 </div>
                                 <br /><br />
-                                <img src="img/Picture1.png">
+                                <img src="img/Nissan12.png">
                                 <br /><br />
                                 <img src="img/Nissan2.png">
                                 <br /><br />
