--- a/public/index.html
+++ b/public/index.html
@@ -251,7 +251,7 @@
                             <div class="row">
                                 <div class="col-10">
                                     <div class= "fact-taxt h2">
-                                        <p>Our Mision</p>
+                                        <p>Our Mission</p>
                                     </div>
                                    
                                    
