--- a/public/single.html
+++ b/public/single.html
@@ -115,10 +115,10 @@
                         <div class="col-12">
                             <h2>Nissan Car Park</h2>
                         </div>
-                        <div class="col-12">
+                        <!-- <div class="col-12">
                             <a href="index.html">Home</a>
                             <a href="portfolio.html">Our Projects</a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -130,7 +130,7 @@
                         <div class="row">
                             <div class="col-lg-10">
                                 <div class="section-header text">
-                                    <p>Owner  &nbsp; &nbsp; : Autologic Co., Ltd.</p>
+                                    <p>Owner  &nbsp; &nbsp;   : Autologic Co., Ltd.</p>
                                     <br />
                                     <p>Main Contractor &nbsp; &nbsp;	  : Poseidon Associate Group Co., Ltd.</p>
                                     <br />
