--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -115,10 +115,10 @@
                         <div class="col-12">
                             <h2>Our Projects</h2>
                         </div>
-                        <div class="col-12">
+                        <!-- <div class="col-12">
                             <a href="">Home</a>
                             <a href="">Our Projects</a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -157,7 +157,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Mondae Nissin</h3>
-                                    <a href="single.html" class="btn nav-link"  >+</a>
+                                    <a href="Nissan.html" class="btn nav-link"  >+</a>
                                 </div>
                             </div>
                         </div>
