--- a/public/about.html
+++ b/public/about.html
@@ -115,10 +115,10 @@
                         <div class="col-12">
                             <h2>About us</h2>
                         </div>
-                        <div class="col-12">
+                        <!-- <div class="col-12">
                             <a href="">Home</a>
                             <a href="">About us</a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
