--- a/public/BCP , Buriram2.html
+++ b/public/BCP , Buriram2.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Nissan Car Park</title>
+        <title>Solar Power Plant for BCP , Buriram</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Construction Company Website Template" name="keywords">
         <meta content="Construction Company Website Template" name="description">
@@ -113,7 +113,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
-                            <h2>Nissan Car Park</h2>
+                            <h2>12.5 Mw  Solar Power Plant for BCP Nongkee, Buriram</h2>
                         </div>
                         <!-- <div class="col-12">
                             <a href="index.html">Home</a>
@@ -140,20 +140,20 @@
                                     <br />
                                     <p>Underground Subcontractor &nbsp; &nbsp;	: ACTIVECON CO.,LTD., Manhole & HDPE Piping</p>
                                     <br />
-                                    <p>Location &nbsp; &nbsp;		: Prakonchai, Burirum   </p>
+                                    <p>Location &nbsp; &nbsp;		: Nongkee, Buriram   </p>
                                     <br />
                                     <!-- <p>Area	&nbsp; &nbsp;	: 100 Rai </p>
                                     <br /> -->
-                                    <p>Project Value &nbsp; &nbsp;	: 31.81 Million Baht      </p>
+                                    <p>Project Value &nbsp; &nbsp;	:34.68 Million Baht</p>
                                     <br />
                                     <p>Year &nbsp; &nbsp;		: 2013-2014</p>
                                 </div>
                                 <br /><br />
-                                <img src="img/Burirum1.png">
+                                <img src="img/Buriram1.png">
                                 <br /><br />
-                                <img src="img/Burirum2.png">
+                                <img src="img/Buriram2.png">
                                 <br /><br />
-                                <img src="img/Burirum3.png">
+                                <img src="img/Buriram3.png">
                                 
                         </div>       
                     </div>    
