--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -157,7 +157,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Mondae Nissin</h3>
-                                    <a href="MN01.html" class="btn nav-link"  >+</a>
+                                    <a href="MN01.html" class="btnk"  >+</a>
                                 </div>
                             </div>
                         </div>
@@ -173,7 +173,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Orange Line</h3>
-                                    <a class="btn" href="UN01.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="UN01.jpg" >+</a>
                                 </div>
                             </div>
                         </div>
@@ -189,7 +189,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Srinakarivirot Hospital</h3>
-                                    <a class="btn" href="TG01.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="TG01.jpg" >+</a>
                                 </div>
                             </div>
                         </div>
@@ -221,7 +221,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Substation 24 kv Bldg., การประปา</h3>
-                                    <a class="btn" href="MEA2.html" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="MEA2.html" >+</a>
                                 </div>
                             </div>
                         </div>
@@ -237,7 +237,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Substation 115 kv Bldg., MEA (Ladkrabung)</h3>
-                                    <a class="btn" href="MEA.html" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="MEA.html" >+</a>
                                 </div>
                             </div>
                         </div>
@@ -253,7 +253,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Future Electrical Control</h3>
-                                    <a class="btn" href="Future Electrical.html" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="Future Electrical.html" >+</a>
                                 </div>
                             </div>
                         </div>
@@ -269,7 +269,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>10th Fl. Car Park Bldg., PKS 2 Hospital</h3>
-                                    <a class="btn" href="Petchkasem 2.html" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="Petchkasem 2.html" >+</a>
                                 </div>
                             </div>
                         </div>
