--- a/public/SIG.html
+++ b/public/SIG.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Nissan Car Park</title>
+        <title>SIG Combibloc Factory Expansion</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Construction Company Website Template" name="keywords">
         <meta content="Construction Company Website Template" name="description">
@@ -113,7 +113,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
-                            <h2>Nissan Car Park</h2>
+                            <h2>SIG Combibloc Factory Expansion</h2>
                         </div>
                         <!-- <div class="col-12">
                             <a href="index.html">Home</a>
@@ -130,42 +130,29 @@
                         <div class="row">
                             <div class="col-lg-10">
                                 <div class="section-header text">
-                                    <p>Owner  &nbsp; &nbsp;   : Autologic Co., Ltd.</p>
+                                    <p>Owner  &nbsp; &nbsp;   : SIG Combibloc Company Limited </p>
                                     <br />
                                     <p>Main Contractor &nbsp; &nbsp;	  : Poseidon Associate Group Co., Ltd.</p>
                                     <br />
-                                    <p>Scope of Work &nbsp; &nbsp;	: Turnkey Design and Build, Civil Work,  Mechanical Work and Electrical System Work   </p>
+                                    <p>Scope of Work &nbsp; &nbsp;	: Structure Work, Architecture Work and Services </p>
                                     <br />
                                     <p>Location &nbsp; &nbsp;		: Eastern Seaboard Industrial Estate (Rayong)</p>
                                     <br />
                                     <p>Area	&nbsp; &nbsp;	: 100 Rai </p>
                                     <br />
-                                    <p>Project Value &nbsp; &nbsp;	: 49 Million Baht   </p>
+                                    <p>Project Value &nbsp; &nbsp;	: 23 Million (Include M&E Work)</p>
                                     <br />
-                                    <p>Year &nbsp; &nbsp;		: 2009-2010</p>
+                                    <p>Year &nbsp; &nbsp;		: 2016-2017</p>
                                 </div>
                                 <br /><br />
-                                <img src="img/Nissan12.png">
+                                <img src="img/SIG1.png">
                                 <br /><br />
-                                <img src="img/Nissan2.png">
+                                <img src="img/SIG2.png">
                                 <br /><br />
-                                <img src="img/Nissan3.png">
+                                <img src="img/SIG3.png">
                                 <br /><br />
-                                <img src="img/Nissan4.png">
-                                <br /><br />
-                                <img src="img/Nissan5.png">
-                                <br /><br />
-                                <img src="img/Nissan6.png">
-                                <br /><br />
-                                <img src="img/Nissan7.png">
-                                <br /><br />
-                                <img src="img/Nissan8.png">
-                                <br /><br />
-                                <img src="img/Nissan9.png">
-                                <br /><br />
-                                <img src="img/Nissan10.png">
-                                <br /><br />
-                                <img src="img/Nissan11.png">
+                                <img src="img/SIG4.png">
+                               
                             </div>
                         </div>       
                     </div>    
