--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -173,7 +173,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Orange Line</h3>
-                                    <a class="btn" href="UN01.jpg" >+</a>
+                                    <a class="btn" href="UN01.html" >+</a>
                                 </div>
                             </div>
                         </div>
@@ -189,7 +189,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Srinakarivirot Hospital</h3>
-                                    <a class="btn" href="TG01.jpg" >+</a>
+                                    <a class="btn" href="TG01.html" >+</a>
                                 </div>
                             </div>
                         </div>
