--- a/public/MEA.html
+++ b/public/MEA.html
@@ -113,7 +113,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h2>โครงการก่อสร้าง Substation 115 KV การไฟฟ้านครหลวง นิคมอุตสาหกรรมลาดกระบัง </h2>
+                            <h2>โครงการก่อสร้าง Substation 115 KV <br> การไฟฟ้านครหลวง นิคมอุตสาหกรรมลาดกระบัง </h2>
                         </div>
                         <!-- <div class="col-12">
                             <a href="index.html">Home</a>
