--- a/public/T.C.html
+++ b/public/T.C.html
@@ -112,8 +112,8 @@
             <div class="page-header">
                 <div class="container">
                     <div class="row">
-                        <div class="col-15">
-                            <h2>โครงการก่อสร้างกำแพงกันดินโรงงานทีซีฟาร์มาซูติคอล บางบอน </h2>
+                        <div class="col-12">
+                            <h2>โครงการก่อสร้างกำแพงกันดิน <br>โรงงานทีซีฟาร์มาซูติคอล บางบอน </h2>
                         </div>
                         <!-- <div class="col-12">
                             <a href="index.html">Home</a>
