--- a/public/TG01.html
+++ b/public/TG01.html
@@ -113,7 +113,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
-                            <h2>โครงการก่อสร้างอาคารผู้ป่วยนอก(M&E System Work)</h2>
+                            <h2>โครงการก่อสร้างอาคารผู้ป่วยนอก<br>(M&E System Work)</h2>
                         </div>
                         <!-- <div class="col-12">
                             <a href="index.html">Home</a>
