--- a/public/UN01.html
+++ b/public/UN01.html
@@ -112,8 +112,8 @@
             <div class="page-header">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-10">
-                            <h2>โครงการก่อสร้างสถานีรถไฟฟ้าสายสีส้ม (M&E System Work)</h2>
+                        <div class="col-12">
+                            <h2>โครงการก่อสร้างสถานีรถไฟฟ้าสายสีส้ม<br>(M&E System Work)</h2>
                         </div>
                         <!-- <div class="col-12">
                             <a href="index.html">Home</a>
@@ -130,7 +130,7 @@
                         <div class="row">
                             <div class="col-lg-10">
                                 <div class="section-header text">
-                                    <p>Owner  &nbsp; &nbsp;   : Unique Engineering and Construction Public Company </p>
+                                    <p>Owner &emsp; : Unique Engineering and Construction Public Company </p>
                                     <br />
                                     <!-- <p>Main Contractor &nbsp; &nbsp;	  : Poseidon Associate Group Co., Ltd.</p>
                                     <br /> -->
