--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -302,7 +302,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>The Circle Ratchapruk Renovate Phase 1</h3>
-                                    <a class="btn" href="Circle1.html" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="Circle1.html" >+</a>
                                 </div>
                             </div>
                         </div>
@@ -318,7 +318,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>SIG Combibloc</h3>
-                                    <a class="btn" href="SIG.html" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="SIG.html" >+</a>
                                 </div>
                             </div>
                         </div>
