--- a/public/BCP , Buriram2.html
+++ b/public/BCP , Buriram2.html
@@ -113,7 +113,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
-                            <h2>12.5 Mw  Solar Power Plant for BCP Nongkee, Buriram</h2>
+                            <h2>12.5 Mw  Solar Power Plant <br>for BCP Nongkee, Buriram</h2>
                         </div>
                         <!-- <div class="col-12">
                             <a href="index.html">Home</a>
