--- a/public/MEA2.html
+++ b/public/MEA2.html
@@ -113,7 +113,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
-                            <h2>โครงการก่อสร้าง Substation 24 KV การประปานครหลวง สนญ.</h2>
+                            <h2>โครงการก่อสร้าง Substation 24 KV <br>การประปานครหลวง สนญ.</h2>
                         </div>
                         <!-- <div class="col-12">
                             <a href="index.html">Home</a>
